# echome

./: .gitignore  Dockerfile  LICENSE  Makefile  README.md  api.py  database.ini.template  database.py  docker-compose.yml  echome.ini.template  guest_image.py  host_server_setup.sh  image_ideas.txt  instance_definitions.py  main.py  psql_commands.txt  pyproject.toml  requirements-django.txt  requirements.txt  ssh_keystore.py  test.py  user.py  vm_manager.py
.github/: CODEOWNERS
cli/: main.py
docs/: 01-introduction.md  02-virtual-machines.md
docs/installation/: 01-install.md  02-setup.md
docs/web-api/: 01-introduction.md  02-authentication.md
echome/: api.py  database_test.py  example_commands.py  main.py  manage.py  metadata_service.py  requirements.txt  requirements_dev.txt
echome-legacy/: metadata_service.py  post_install_setup.py  wsgi_metadata_service_entry.py
echome-legacy/backend/: commander.py  database.py  kube_manager.py  user.py  vm_manager.py
echome/api/: api_view.py  management_command.py  urls.py  views.py
echome/backend/: commander.py  config.py  database.py  guest_image.py  id_gen.py  instance_definitions.py  kube_manager.py  ssh_keystore.py  user.py  vault.py  vm_manager.py  vnet.py
echome/commander/: cloudinit.py  cloudlocalds.py  commander.py  (+2 more)
python_sdk/: test_script.py
scripts/: new_vm.sh
system/: echome.conf  echome.service  echome_uwsgi.ini
tests/: __init__.py  test_vm_manager.py
utils-app/: Dockerfile  requirements.txt
xml_templates/: create_vm.xml  pool-define-as.xml  vm_windows.xml  vm_windows_ready_launch.xml
(+158 files in other folders)
