[tool.poetry]
name = "echome"
version = "0.1.0"
description = ""
authors = ["Marcus Gutierrez <marcusgttrz@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.8"
celery = "^5.2.3"
Django = "^4.0.7"
django-extensions = "^3.1.5"
djangorestframework = "^3.13.1"
djangorestframework-simplejwt = "^5.0.0"
gunicorn = "^20.1.0"
docker = "^5.0.3"
hvac = "^0.11.2"
libvirt-python = "^8.0.0"
psycopg2-binary = "^2.9.3"
xmltodict = "^0.12.0"
py-cpuinfo = "^8.0.0"
dj-database-url = "^0.5.0"
sshpubkeys = "^3.3.1"
cryptography = "3.4.8"
"ruamel.yaml" = "^0.17.20"
PyYAML = "^6.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
